  * Migrate to Hibernate3. Ticket #65.
  * Change RetsConfig to allow for changeable persistence
    mechanisms. Ticket #66.
  * Detect RetsConfig changes and dynamically reload.
    Ticket #69.
  * .EMPTY. fails on Booleans. Ticket #70.
  * Add Request Logging and Search Statistics. Ticket #71.
  * MaximumLength in Table metadata must be > 0. Ticket #74.

Version 3.1.1 - 30 Sep 2009

  * Strict Parsing flag not properly passed to
    JDomCompactBuilder in admin tool. Ticket #59.
  * getMetadata in STANDARD-XML fails compliance check.
    Ticket #60.

Version 3.1.0 - 23 Sep 2009

  * Object ID of * misreported in error response. Ticket #26.
  * .EMPTY. is failing on Lookups. Ticket #55.
  * Format=STANDARD-XML Metadata fails DTD check. Ticket #56.
  * Search using various forms of 1.7.2 DATETIME fails. Ticket#57.

Version 3.0.0b5 - 31 Jul 2009

  * Add cut/paste to all text components. Ticket #53.
  * Log additional information if activation fails. Ticket #54.

Version 3.0.0b4 - 15 Jul 2009

  * Update User Documentation. Ticket #22.
  * EditMask in Table Data Attribute wrong. Ticket #40.
  * Include the Admin Tool in the WebApp dist. Ticket #42.
    Note that the directory that used to be called "webapp"
    is now called "variman" and can be copied to your
    application server.
  * Add Button Context wrong after adding Class. Ticket #43.
  * Add MySQL support. Ticket #44.
  * Switch to XDoclet2. Ticket #45.
  * Make junit.jar an explicit dependency. Ticket #46.
  * IOUtilsTest fails on Windows. Ticket #47.
  * Metadata Editor should render tree in Alpha order.
    Ticket #48.
  * Added Activation. Ticket #49.
  * COMPACT Fomat Delimiter found in data stream breaks
    response. Ticket #51.
  * .ANY. is failing on Lookup. Ticket #52.

Version 3.0.0b3 - 29 Apr 2009

  * Update Windows installation to use current Java-Service. 
    Ticket #25.
  * Update embedded Tommcat server to 6.0. Ticket #28.
  * Refresh third party support libraries. Ticket #29.