@@ -10,6 +10,8 @@ Version 3.2.0 - xx xxx 2009
   * .EMPTY. fails on Booleans. Ticket #70.
   * Add Request Logging and Search Statistics. Ticket #71.
   * MaximumLength in Table metadata must be > 0. Ticket #74.
+  * Failure to find an image in an object-set does not
+    properly close the multi-part response. Ticket #77.
 
 Version 3.1.1 - 30 Sep 2009
 
